[package]
name = "pondos"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Patrick Lerner <ptlerner@gmail.com>"]
exclude = ["dist", "build", "assets"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = { version = "0.8.3" }
bevy_ecs_tilemap = "0.7"
bevy_egui = "0.16"
log = "0.4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bevy_common_assets = { version = "0.3", features = ["yaml"] }
clap = { version = "4.0", features = ["derive"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.7"

[target.'cfg(target_family = "wasm")'.dependencies.bevy_ecs_tilemap]
version = "*"
# NOTE: needed as per https://github.com/StarArawn/bevy_ecs_tilemap/issues/283
features = ["atlas"]
