[package]
name = "pondos"
version = "0.5.0-dev"
edition = "2021"
publish = false
authors = ["Patrick Lerner <ptlerner@gmail.com>"]
exclude = ["dist", "build", "assets"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11", "jpeg"] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
rand = "0.8"
bevy_ecs_tilemap = "0.8"
bevy_egui = "0.16"
log = "0.4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bevy_common_assets = { version = "0.3", features = ["yaml"] }
clap = { version = "4.0", features = ["derive"] }
iyes_loopless = "0.9"

# keep the following in sync with Bevy's dependencies
winit = { version = "*", default-features = false }
image = { version = "*", default-features = false }

[build-dependencies]
embed-resource = "1.7"

[target.'cfg(target_family = "wasm")'.dependencies.bevy_ecs_tilemap]
version = "*"
# NOTE: needed as per https://github.com/StarArawn/bevy_ecs_tilemap/issues/283
features = ["atlas"]
